--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,5 @@
 steps:
   # Deploy to Cloud Run using source-based deployment
-  # Cloud Run will handle the build process automatically
   - name: 'gcr.io/cloud-builders/gcloud'
     args: [
       'run', 'deploy', '${_SERVICE_NAME}',
@@ -12,7 +11,8 @@ steps:
       '--cpu', '${_CPU}',
       '--min-instances', '${_MIN_INSTANCES}',
       '--max-instances', '${_MAX_INSTANCES}',
-      '--timeout', '3600'
+      '--timeout', '3600',
+      '--set-build-env-vars', 'NEXT_PUBLIC_MY_ENV_VAR=${_NEXT_PUBLIC_MY_ENV_VAR},SERVER_ENV_VAR=${_SERVER_ENV_VAR}'
     ]
 
 # Substitution variables with defaults
@@ -24,6 +24,8 @@ substitutions:
   _CPU: '1'
   _MIN_INSTANCES: '0'
   _MAX_INSTANCES: '10'
+  _NEXT_PUBLIC_MY_ENV_VAR: ''
+  _SERVER_ENV_VAR: ''
 
 # Build timeout (important for Next.js builds)
 timeout: '1200s'
