Fix typo in Cloud Run deployment command for setting build environment variables

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -53,7 +53,7 @@ steps:
       '--min-instances', '${_MIN_INSTANCES}',
       '--max-instances', '${_MAX_INSTANCES}',
       '--timeout', '3600',
-      '--set-build-env-vars-file', '/workspace/build_env.txt'
+      '--build-env-vars-file', '/workspace/build_env.txt'
     ]
 
 # Substitution variables with defaults
