--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -25,38 +25,68 @@ steps:
         cat /workspace/env_pairs.txt
 
         # Convert to build env format (YAML format for --build-env-vars-file)
-        echo "# Build environment variables" > /workspace/build_env.yaml
-        while IFS= read -r line; do
-          if [[ -n "$line" ]]; then
-            if [[ "$line" =~ ^[A-Z_][A-Z0-9_]*$ ]]; then
-              # This is a variable name, read the next line for value
-              var_name="$line"
-              read -r var_value
-              # Escape special characters for YAML and quote the value
-              escaped_value=$(printf '%s\n' "$var_value" | sed 's/"/\\"/g')
-              echo "${var_name}: \"${escaped_value}\"" >> /workspace/build_env.yaml
+        # Start with an empty YAML map
+        echo "{}" > /workspace/build_env.yaml
+
+        # Check if we have any environment variables
+        if [[ -s /workspace/env_pairs.txt ]]; then
+          echo "Found environment variables, converting to YAML..."
+          # Create proper YAML format
+          echo "# Build environment variables" > /workspace/build_env.yaml
+
+          while IFS= read -r line; do
+            if [[ -n "$line" ]]; then
+              if [[ "$line" =~ ^[A-Z_][A-Z0-9_]*$ ]]; then
+                # This is a variable name, read the next line for value
+                var_name="$line"
+                read -r var_value
+                # Escape special characters for YAML and quote the value
+                escaped_value=$(printf '%s\n' "$var_value" | sed 's/"/\\"/g')
+                echo "${var_name}: \"${escaped_value}\"" >> /workspace/build_env.yaml
+              fi
             fi
-          fi
-        done < /workspace/env_pairs.txt
+          done < /workspace/env_pairs.txt
+        else
+          echo "No environment variables found, using empty YAML map"
+          echo "{}" > /workspace/build_env.yaml
+        fi
 
         echo "Final build environment file:"
         cat /workspace/build_env.yaml
 
   # Step 2: Deploy to Cloud Run using source-based deployment with extracted env vars
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: [
-      'run', 'deploy', '${_SERVICE_NAME}',
-      '--source', '.',
-      '--region', '${_REGION}',
-      '--platform', 'managed',
-      '--port', '8080',
-      '--memory', '${_MEMORY}',
-      '--cpu', '${_CPU}',
-      '--min-instances', '${_MIN_INSTANCES}',
-      '--max-instances', '${_MAX_INSTANCES}',
-      '--timeout', '3600',
-      '--build-env-vars-file', '/workspace/build_env.yaml'
-    ]
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        # Check if we have environment variables to pass
+        if [[ -s /workspace/build_env.yaml ]] && [[ "$(cat /workspace/build_env.yaml)" != "{}" ]]; then
+          echo "Deploying with build environment variables..."
+          gcloud run deploy ${_SERVICE_NAME} \
+            --source . \
+            --region ${_REGION} \
+            --platform managed \
+            --port 8080 \
+            --memory ${_MEMORY} \
+            --cpu ${_CPU} \
+            --min-instances ${_MIN_INSTANCES} \
+            --max-instances ${_MAX_INSTANCES} \
+            --timeout 3600 \
+            --build-env-vars-file /workspace/build_env.yaml
+        else
+          echo "Deploying without build environment variables..."
+          gcloud run deploy ${_SERVICE_NAME} \
+            --source . \
+            --region ${_REGION} \
+            --platform managed \
+            --port 8080 \
+            --memory ${_MEMORY} \
+            --cpu ${_CPU} \
+            --min-instances ${_MIN_INSTANCES} \
+            --max-instances ${_MAX_INSTANCES} \
+            --timeout 3600
+        fi
 
 # Substitution variables with defaults
 # These can be overridden in the Cloud Build trigger settings
