--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_MY_ENV_VAR='your_value_here'
-SERVER_ENV_VAR='your_server_value_here'
+# NEXT_PUBLIC_MY_ENV_VAR='your_value_here'
+# SERVER_ENV_VAR='your_server_value_here'
 
 
